--- a/html/index.html
+++ b/html/index.html
@@ -23,20 +23,42 @@
 <!-- wrapper -->
 <div class="wrapper">
   <header role="banner">
-    <div class="inner">
+    <div class="container">
+      <div class="row">
 
-      <div class="logo">
-        <img src="img/logo.png" alt="" title="">
-      </div><!-- /logo -->
+        <div class="logo">
+          <img src="img/logo.png" alt="" title="">
+        </div><!-- /logo -->
 
-      <nav class="nav" role="navigation">
-        <ul class="headnav">
-          <li>menu</li>
-          <li>menu</li>
-        </ul>
-      </nav><!-- /nav -->
+        <nav role="navigation">
+          <ul class="headnav">
+            <li><a href="#">Каталог услуг</a></li>
+            <li><a href="#">База знаний</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">О компании</a></li>
+          </ul>
+        </nav><!-- /nav -->
 
-    </div><!-- /.inner -->
+        <button class="header-gosearch__button"></button>
+
+
+
+        <button class="btn btn__header-callback">Обратный звонок</button>
+
+        <div class="col-md-12 header-slider">
+
+        </div><!-- /.col-md-12 header-slider -->
+
+        <div class="header-search">
+          <form action="">
+            <input type="text">
+            <button class="btn btn-header-search__submitt"></button>
+          </form>
+          <p>Например: <span>Зачистка резервуаров</span>, <span>ПМЛЛПА</span>,<span>ПМЛЛПА</span>, <span>Документы и нормативные акты</span>, <span>Законы</span>,</p>
+        </div><!-- /.header-search -->
+
+      </div><!-- row -->
+    </div><!-- /.container -->
   </header><!-- /header -->
 
   <section role="main">
