--- a/html/index.html
+++ b/html/index.html
@@ -30,23 +30,28 @@
           <img src="img/logo.png" alt="" title="">
         </div><!-- /logo -->
 
-        <nav role="navigation">
+        <nav class="headnav-container" role="navigation">
           <ul class="headnav">
             <li><a href="#">Каталог услуг</a></li>
-            <li><a href="#">База знаний</a></li>
+            <li class="current-menu-item"><a href="#">База знаний</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">О компании</a></li>
-          </ul>
-        </nav><!-- /nav -->
+          </ul><!-- headnav -->
+        </nav><!-- /.headnav-container -->
 
-        <button class="header-gosearch__button"></button>
+        <div class="header-gosearch">
+          <button class="header-gosearch__button" title="Поиск"></button>
+        </div><!-- /.header-gosearch -->
 
+        <div class="header-callback">
+          <button class="header-callback__button">Обратный звонок</button>
+        </div><!-- /.header-callback -->
 
-
-        <button class="btn btn__header-callback">Обратный звонок</button>
+        <h1 class="col-md-12 header__title">Расширенный статичый <a href="">заголовок</a></h1>
 
         <div class="col-md-12 header-slider">
-
+          <h3 class="header-slider__title">зАГОЛОВОК ТЕКСТА НА СЛАЙДЕРЕ</h3>
+          <p class="header-slider__description">Подпись к заголовку. Пример: Портал РосТехЗащита поздравляет вас с Пасхой! Желаем вам счастья, здоровья и благополучия!</p>
         </div><!-- /.col-md-12 header-slider -->
 
         <div class="header-search">
@@ -59,168 +64,202 @@
 
       </div><!-- row -->
     </div><!-- /.container -->
+
+    <div class="header-slider__fullsize">
+
+    </div><!-- /.header-slider__fullsize -->
+
   </header><!-- /header -->
 
   <section role="main">
-    <div class="inner">
 
-      <article>
-        <h1 class="ctitle">Пример контента (рыба)</h1>
-        <p>The purpose of this HTML is to help determine what default settings are with Bitters and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a site.</p>
+    <article class="article__workvectors">
+      <div class="container">
+        <div class="row">
 
-        <hr>
+          <a class="col-md-4 article__workvectors-item" href="">
+            <h5>Аварийно-спасательные работы</h5>
+          </a><!-- /.col-md-4 article__workvectors-item -->
 
-        <h1>h1. Heading</h1>
-        <h2>h2. Heading</h2>
-        <h3>h3. Heading</h3>
-        <h4>h4. Heading</h4>
-        <h5>h5. Heading</h5>
-        <h6>h6. Heading</h6>
+          <a class="col-md-4 article__workvectors-item" href="">
+            <h5>Разработка паспортов и планов</h5>
+          </a><!-- /.col-md-4 article__workvectors-item -->
 
-        <hr>
+          <a class="col-md-4 article__workvectors-item" href="">
+            <h5>Обслуживание опасных производственных объектов</h5>
+          </a><!-- /.col-md-4 article__workvectors-item -->
 
-        <h1 class="ctitle">Paragraph</h1>
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </article><!-- /.article__workvectors -->
 
-        <p>Lorem ipsum dolor sit amet, <a href="#" title="test link">test link</a> adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
+    <article class="article__popular-services">
+      <div class="container">
+        <div class="row">
 
-        <p>Lorem ipsum dolor sit amet, <em>emphasis</em> consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <hr>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <h1 class="ctitle">List Types</h1>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <h3>Definition List - dl > dt + dd</h3>
-        <dl>
-          <dt>Definition List Title</dt>
-          <dd>This is a definition list division.</dd>
-        </dl>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <h3>Ordered List - ol</h3>
-        <ol>
-          <li>List Item 1</li>
-          <li>List Item 2</li>
-          <li>List Item 3</li>
-        </ol>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <h3>Unordered List - ul</h3>
-        <ul>
-          <li>List Item 1</li>
-          <li>List Item 2</li>
-          <li>List Item 3</li>
-        </ul>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <hr>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <h1 class="ctitle">Fieldsets and Form Elements</h1>
+          <a class="col-md-3 popular-services" href="">
+            <h5>Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+          </a><!-- /.col-md-3 popular-services -->
 
-        <fieldset>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus.</p>
+          <a href="" class="btn btn-blue popular-services__more">Все услуги</a>
 
-          <form>
-            <h2>Form Element</h2>
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </article><!-- /.article__popular-services -->
 
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.</p>
+    <article class="article__content">
+      <div class="container">
+        <div class="row">
 
-            <p><label for="text_field">Text Field:</label>
-              <input type="text" id="text_field"></p>
+          <h2 class="col-md-12 content_title">заголовок для текстового блока</h2>
+          <div class="col-md-4 article__content-thumbs">
 
-            <p><label for="text_area">Text Area:</label>
-              <textarea id="text_area"></textarea></p>
+          </div><!-- article__content-thumbs -->
+          <div class="col-md-8 article__content-text">
+            <p>Профессиональное аварийно-спасательное формирование "РосТехЗащита"предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, обеспечение общественной безопасности, сохранности имущества граждан, развитие единой государственной системы предупреждения и ликвидации чрезвычайных ситуаций, противодействие угрозам техногенного и природного характера, а также террористическим актам на территории страны.</p>
+            <p>Профессиональное <a href="">аварийно-спасательное формирование</a> "РосТехЗащита" создана в целях обеспечения готовности к действиям по ликвидации чрезвычайных ситуаций в рамках статьей 10 Федерального закона N 116-ФЗ от 21 июля 1997г.«О промышленной безопасности опасных производственных объектов», статьей 7 Федерального закона от 22.08.95 N 151-ФЗ «Об аварийно-спасательных службах и статусе спасателей» и статьей 9 Федерального закона от 12.02.98 N 28-ФЗ «О гражданской обороне» .</p>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <p>ПАСФ "РосТехЗащита" является <a href="">единственным</a> аттестованным аварийно-спасательным формированием, максимально подготовленным, имеющим право на ведение аварийно-спасательных и других неотложных работ на территории Московской области.</p>
+          </div><!-- /.col-md-8 article__content-text -->
 
-            <p><label for="select_element">Select Element:</label>
-              <select name="select_element">
-                <optgroup label="Option Group 1">
-                  <option value="1">Option 1</option>
-                  <option value="2">Option 2</option>
-                  <option value="3">Option 3</option>
-                </optgroup>
-                <optgroup label="Option Group 2">
-                  <option value="1">Option 1</option>
-                  <option value="2">Option 2</option>
-                  <option value="3">Option 3</option>
-                </optgroup>
-            </select></p>
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </article><!-- /.article__content -->
 
-            <p><label for="radio_buttons">Radio Buttons:</label>
-              <label>
-                <input type="radio" class="radio" name="radio_button" value="radio_1"> Radio 1
-              </label>
-              <label>
-                <input type="radio" class="radio" name="radio_button" value="radio_2"> Radio 2
-              </label>
-              <label>
-                <input type="radio" class="radio" name="radio_button" value="radio_3"> Radio 3
-              </label>
-            </p>
+    <article class="article__popnews">
+      <div class="container">
+        <div class="row">
 
-            <p><label for="checkboxes">Checkboxes:</label>
-              <label>
-                <input type="checkbox" class="checkbox" name="checkboxes" value="check_1"> Checkbox 1
-              </label>
-              <label>
-                <input type="checkbox" class="checkbox" name="checkboxes" value="check_2"> Checkbox 2
-              </label>
-              <label>
-                <input type="checkbox" class="checkbox" name="checkboxes" value="check_3"> Checkbox 3
-              </label>
-            </p>
+          <div class="col-md-8 article__popnews-popular">
 
-            <p><label for="password">Password:</label>
-              <input type="password" class="password" name="password">
-            </p>
+            <div class="article__popnews-popular-item">
+              <h5>Заголовок для первого горизонтального баннера </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+              <span class="date">21 03 2016</span><span class="time">18:06</span>
+            </div><!-- /.article__popnews-popular-item -->
 
-            <p><label for="file">File Input:</label>
-              <input type="file" class="file" name="file">
-            </p>
+            <div class="article__popnews-popular-item">
+              <h5>Заголовок для первого горизонтального баннера </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+              <span class="date">21 03 2016</span><span class="time">18:06</span>
+            </div><!-- /.article__popnews-popular-item -->
 
+            <div class="article__popnews-popular-item">
+              <h5>Заголовок для первого горизонтального баннера </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+              <span class="date">21 03 2016</span><span class="time">18:06</span>
+            </div><!-- /.article__popnews-popular-item -->
 
-            <p><input type="submit" value="Submit"></p>
-          </form>
-        </fieldset>
+            <a href="" class="article__popnews-more">Смотреть еще...</a>
 
-        <hr>
+          </div><!-- /.col-md-8 article__popnews-popular -->
 
-        <h1 class="ctitle">Tables</h1>
+          <div class="col-md-4 article__popnews-news">
 
-        <table cellspacing="0" cellpadding="0">
-          <tbody>
-            <tr>
-              <th>Table Header 1</th><th>Table Header 2</th><th>Table Header 3</th>
-            </tr>
-            <tr>
-              <td>Division 1</td><td>Division 2</td><td>Division 3</td>
-            </tr>
-            <tr class="even">
-              <td>Division 1</td><td>Division 2</td><td>Division 3</td>
-            </tr>
-            <tr>
-              <td>Division 1</td><td>Division 2</td><td>Division 3</td>
-            </tr>
-          </tbody>
-        </table>
-      </article>
+            <div class="article__popnews-news">
+              <h5>Заголовок для первого горизонтального баннера </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+              <span class="date">21 03 2016</span><span class="time">18:06</span>
+            </div><!-- /.article__popnews-news -->
 
-      <aside class="sidebar" role="complementary">
-        <div class="widget">
-          <h6>Пример виджета</h6>
-          <ul>
-            <li class="cat-item-none">Рубрик нет</li>
-          </ul>
-        </div><!-- widget -->
-      </aside><!-- /sidebar -->
+            <div class="article__popnews-news">
+              <h5>Заголовок для первого горизонтального баннера </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+              <span class="date">21 03 2016</span><span class="time">18:06</span>
+            </div><!-- /.article__popnews-news -->
 
-    </div><!-- /.inner -->
+            <div class="article__popnews-news">
+              <h5>Заголовок для первого горизонтального баннера </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+              <span class="date">21 03 2016</span><span class="time">18:06</span>
+            </div><!-- /.article__popnews-news -->
+
+            <a href="" class="article__popnews-more">Смотреть еще...</a>
+
+          </div><!-- /.col-md-4 article__popnews-news -->
+
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </article><!-- /.article__popnews -->
+
   </section><!-- /section -->
 </div><!-- /wrapper -->
 
 <footer role="contentinfo">
-  <div class="inner">
 
-    <p class="copyright">
-      © 2016 Собственность. Работает на html2wp easy.
-    </p><!-- /copyright -->
+  <div class="container">
+    <div class="row">
 
-  </div><!-- /.inner -->
+      <div class="col-md-6 footernav footernav-first">
+        <h6>Направления услуг</h6>
+        <ul>
+          <li><a href="">Аварийно-спасительные роботы</a></li>
+          <li><a href="">Разработка паспортов и планов</a></li>
+          <li><a href="">Обслуживание опасных производственных объектов</a></li>
+        </ul>
+      </div><!-- /.col-md-6 footernav footernav-first -->
+
+      <div class="col-md-3 footernav footernav-middle">
+        <h6>База знаний</h6>
+        <ul>
+          <li><a href="">F. A. Q.</a></li>
+          <li><a href="">Акты</a></li>
+          <li><a href="">Законы</a></li>
+        </ul>
+      </div><!-- /.col-md-3 footernav footernav-middle -->
+
+      <div class="col-md-3 footernav footernav-lasr">
+        <h6>О компании</h6>
+        <ul>
+          <li><a href="">Контакты</a></li>
+          <li><a href="">Лицензии</a></li>
+          <li><a href="">Фотоархив</a></li>
+        </ul>
+      </div><!-- /.col-md-3 footernav footernav-lasr -->
+
+      <div class="col-md-12 footer-copywrite">
+        <p><span>Профессиональное аварийно-спасательное формирование "РосТехЗащита"</span>    © 2016 Копирование информации запрещено</p>
+      </div><!-- /.col-md-12 footer-copywrite -->
+
+    </div><!-- /.row -->
+  </div><!-- /.container -->
+
 </footer><!-- /footer -->
 
   <script type="text/javascript" src="js/vendor.js"></script>
