--- a/html/index.html
+++ b/html/index.html
@@ -52,14 +52,15 @@
         <div class="col-md-12 header-slider">
           <h3 class="header-slider__title">зАГОЛОВОК ТЕКСТА НА СЛАЙДЕРЕ</h3>
           <p class="header-slider__description">Подпись к заголовку. Пример: Портал РосТехЗащита поздравляет вас с Пасхой! Желаем вам счастья, здоровья и благополучия!</p>
+          <a href="#" class="btn header-slider__more">Подробнее</a>
         </div><!-- /.col-md-12 header-slider -->
 
-        <div class="header-search">
+        <div class="col-md-12 header-search">
           <form action="">
-            <input type="text">
+            <input type="text" placeholder="Поиск по названию услуги или ЧП">
             <button class="btn btn-header-search__submitt"></button>
           </form>
-          <p>Например: <span>Зачистка резервуаров</span>, <span>ПМЛЛПА</span>,<span>ПМЛЛПА</span>, <span>Документы и нормативные акты</span>, <span>Законы</span>,</p>
+          <p>Например: <span class="quick"><span class="dotted">Зачистка резервуаров</span></span><span class="quick"><span class="dotted">ПМЛЛПА</span></span><span class="quick"><span class="dotted">ПМЛЛПА</span></span><span class="quick"><span class="dotted">Документы и нормативные акты</span></span><span class="quick"><span class="dotted">Законы</span></span></p>
         </div><!-- /.header-search -->
 
       </div><!-- row -->
