--- a/html/index.html
+++ b/html/index.html
@@ -74,25 +74,29 @@
 
   <section role="main">
 
-    <article class="article__workvectors">
+    <article class="article-workvectors">
       <div class="container">
         <div class="row">
+          <h4 class="col-md-12 article-workvectors__title">Направление нашей деятельности</h4>
 
-          <a class="col-md-4 article__workvectors-item" href="">
+          <a class="col-md-4 article-workvectors__item article-workvectors__item-1" href="">
+            <img src="img/base64/ico-workvectors-1.png" alt="">
             <h5>Аварийно-спасательные работы</h5>
-          </a><!-- /.col-md-4 article__workvectors-item -->
+          </a><!-- /.col-md-4 article-workvectors__item -->
 
-          <a class="col-md-4 article__workvectors-item" href="">
+          <a class="col-md-4 article-workvectors__item article-workvectors__item-2" href="">
+            <img src="img/base64/ico-workvectors-2.png" alt="">
             <h5>Разработка паспортов и планов</h5>
-          </a><!-- /.col-md-4 article__workvectors-item -->
+          </a><!-- /.col-md-4 article-workvectors__item -->
 
-          <a class="col-md-4 article__workvectors-item" href="">
+          <a class="col-md-4 article-workvectors__item article-workvectors__item-3" href="">
+            <img src="img/base64/ico-workvectors-3.png" alt="">
             <h5>Обслуживание опасных производственных объектов</h5>
-          </a><!-- /.col-md-4 article__workvectors-item -->
+          </a><!-- /.col-md-4 article-workvectors__item -->
 
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </article><!-- /.article__workvectors -->
+    </article><!-- /.article-workvectors -->
 
     <article class="article__popular-services">
       <div class="container">
