.article__popular-services

--- a/html/index.html
+++ b/html/index.html
@@ -103,43 +103,43 @@
         <div class="row">
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-1.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-2.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-3.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-4.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-5.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-6.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-7.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной</p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a class="col-md-3 popular-services" href="">
-            <h5>Зачистка резервуаров</h5>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <h5><img src="img/base64/popular-services-8.png" alt="">Зачистка резервуаров</h5>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной</p>
           </a><!-- /.col-md-3 popular-services -->
 
           <a href="" class="btn btn-blue popular-services__more">Все услуги</a>
@@ -159,7 +159,7 @@
           <div class="col-md-8 article__content-text">
             <p>Профессиональное аварийно-спасательное формирование "РосТехЗащита"предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, обеспечение общественной безопасности, сохранности имущества граждан, развитие единой государственной системы предупреждения и ликвидации чрезвычайных ситуаций, противодействие угрозам техногенного и природного характера, а также террористическим актам на территории страны.</p>
             <p>Профессиональное <a href="">аварийно-спасательное формирование</a> "РосТехЗащита" создана в целях обеспечения готовности к действиям по ликвидации чрезвычайных ситуаций в рамках статьей 10 Федерального закона N 116-ФЗ от 21 июля 1997г.«О промышленной безопасности опасных производственных объектов», статьей 7 Федерального закона от 22.08.95 N 151-ФЗ «Об аварийно-спасательных службах и статусе спасателей» и статьей 9 Федерального закона от 12.02.98 N 28-ФЗ «О гражданской обороне» .</p>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной системы услуг по обеспечению промышленной безопасности и предоставление реальной помощи при чрезвычайных ситуациях (ЧС).</p>
+            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
             <p>ПАСФ "РосТехЗащита" является <a href="">единственным</a> аттестованным аварийно-спасательным формированием, максимально подготовленным, имеющим право на ведение аварийно-спасательных и других неотложных работ на территории Московской области.</p>
           </div><!-- /.col-md-8 article__content-text -->
 
