--- a/html/index.html
+++ b/html/index.html
@@ -154,13 +154,11 @@
 
           <h2 class="col-md-12 content_title">заголовок для текстового блока</h2>
           <div class="col-md-4 article__content-thumbs">
-
+            <img src="img/content/thumbs.png" alt="">
           </div><!-- article__content-thumbs -->
           <div class="col-md-8 article__content-text">
             <p>Профессиональное аварийно-спасательное формирование "РосТехЗащита"предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, обеспечение общественной безопасности, сохранности имущества граждан, развитие единой государственной системы предупреждения и ликвидации чрезвычайных ситуаций, противодействие угрозам техногенного и природного характера, а также террористическим актам на территории страны.</p>
             <p>Профессиональное <a href="">аварийно-спасательное формирование</a> "РосТехЗащита" создана в целях обеспечения готовности к действиям по ликвидации чрезвычайных ситуаций в рамках статьей 10 Федерального закона N 116-ФЗ от 21 июля 1997г.«О промышленной безопасности опасных производственных объектов», статьей 7 Федерального закона от 22.08.95 N 151-ФЗ «Об аварийно-спасательных службах и статусе спасателей» и статьей 9 Федерального закона от 12.02.98 N 28-ФЗ «О гражданской обороне» .</p>
-            <p>Основной задачей ПАСФ "РосТехЗащита" является внедрение комплексной </p>
-            <p>ПАСФ "РосТехЗащита" является <a href="">единственным</a> аттестованным аварийно-спасательным формированием, максимально подготовленным, имеющим право на ведение аварийно-спасательных и других неотложных работ на территории Московской области.</p>
           </div><!-- /.col-md-8 article__content-text -->
 
         </div><!-- /.row -->
@@ -172,48 +170,48 @@
         <div class="row">
 
           <div class="col-md-8 article__popnews-popular">
-
-            <div class="article__popnews-popular-item">
+            <h4 class="article__popnews-title">Популярная информация</h4>
+            <div class="article__popnews-popitem">
               <h5>Заголовок для первого горизонтального баннера </h5>
               <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
               <span class="date">21 03 2016</span><span class="time">18:06</span>
-            </div><!-- /.article__popnews-popular-item -->
+            </div><!-- /.article__popnews-popitem -->
 
-            <div class="article__popnews-popular-item">
+            <div class="article__popnews-popitem">
               <h5>Заголовок для первого горизонтального баннера </h5>
               <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
               <span class="date">21 03 2016</span><span class="time">18:06</span>
-            </div><!-- /.article__popnews-popular-item -->
+            </div><!-- /.article__popnews-popitem -->
 
-            <div class="article__popnews-popular-item">
+            <div class="article__popnews-popitem">
               <h5>Заголовок для первого горизонтального баннера </h5>
               <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
               <span class="date">21 03 2016</span><span class="time">18:06</span>
-            </div><!-- /.article__popnews-popular-item -->
+            </div><!-- /.article__popnews-popitem -->
 
             <a href="" class="article__popnews-more">Смотреть еще...</a>
 
           </div><!-- /.col-md-8 article__popnews-popular -->
 
           <div class="col-md-4 article__popnews-news">
-
-            <div class="article__popnews-news">
-              <h5>Заголовок для первого горизонтального баннера </h5>
-              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+            <h4 class="article__popnews-title">Новости</h4>
+            <div class="article__popnews-newitem">
+              <h5>Новость первая </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает <a href="" class="popnews-more">подробнее... </a></p>
               <span class="date">21 03 2016</span><span class="time">18:06</span>
-            </div><!-- /.article__popnews-news -->
+            </div><!-- /.article__popnews-newitem -->
 
-            <div class="article__popnews-news">
-              <h5>Заголовок для первого горизонтального баннера </h5>
-              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+            <div class="article__popnews-newitem">
+              <h5>Новость вторая</h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает <a href="" class="popnews-more">подробнее... </a></p>
               <span class="date">21 03 2016</span><span class="time">18:06</span>
-            </div><!-- /.article__popnews-news -->
+            </div><!-- /.article__popnews-newitem -->
 
-            <div class="article__popnews-news">
-              <h5>Заголовок для первого горизонтального баннера </h5>
-              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает Вам уникальные комплексные услуги в сфере экологической и промышленной безопасности объектов нефтегазового комплекса, <a href="" class="popnews-more">подробнее... </a></p>
+            <div class="article__popnews-newitem">
+              <h5>Новость вторая </h5>
+              <p>Профессиональное аварийно - спасательное формирование "РосТехЗащита" предлагает <a href="" class="popnews-more">подробнее... </a></p>
               <span class="date">21 03 2016</span><span class="time">18:06</span>
-            </div><!-- /.article__popnews-news -->
+            </div><!-- /.article__popnews-newitem -->
 
             <a href="" class="article__popnews-more">Смотреть еще...</a>
 
